--- a/Exercises/Shared/NavMenu.razor
+++ b/Exercises/Shared/NavMenu.razor
@@ -22,6 +22,21 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="exercise03-02">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Exercise03-02
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="exercise03-03">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Exercise03-03
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="exercise04-01">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Exercise04-01
+            </NavLink>
+        </li>
     </ul>
 </div>
 
