--- a/Exercises/Shared/NavMenu.razor
+++ b/Exercises/Shared/NavMenu.razor
@@ -37,6 +37,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Exercise04-01
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="exercise06-01">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Exercise06-01
+            </NavLink>
+        </li>
     </ul>
 </div>
 
