--- a/Exercises/wwwroot/css/site.css
+++ b/Exercises/wwwroot/css/site.css
@@ -165,3 +165,13 @@ app {
 .btn {
     padding: 0 10px;
 }
+
+.calc-btn-size-sm {
+    width: 33px;
+    height: 33px;
+}
+
+.calc-btn-size-lg {
+    width: 108px;
+    height: 33px;
+}
