--- a/Exercises/Shared/NavMenu.razor
+++ b/Exercises/Shared/NavMenu.razor
@@ -47,6 +47,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Exercise07-01
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="exercise08-01">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Exercise08-01
+            </NavLink>
+        </li>
     </ul>
 </div>
 
