--- a/Exercises/Shared/NavMenu.razor
+++ b/Exercises/Shared/NavMenu.razor
@@ -57,6 +57,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Exercise09-01
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="exercise10-01">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Exercise10-01
+            </NavLink>
+        </li>
     </ul>
 </div>
 
